change shop data init